<resources>
    <string name="app_name">Grupo de família</string>
    <string name="meu_perfil">Meu perfil</string>
    <string name="avisos">Avisos</string>
    <string name="pagamentos">Pagamentos</string>
    <string name="agenda">Agenda</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Celular</string>
    <string name="logradouro">Logradouro</string>
    <string name="Cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="cpf">CPF</string>
    <string name="grp_familia">Grupo de família</string>
    <string name="usuario">usuário</string>
    <string name="imagem">imagem</string>
    <string name="informacoes_atualizadas">Informações atualizadas</string>
    <string name="falha_atualizacao_informacoes">Ocorreu uma falha ao atualizar as informações</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_biometricfeature">Biometria</string>
    <string name="login">Login</string>
    <string name="title_bio">bio</string>
    <string name="title_tesouraria">Tesouraria</string>
    <string name="usar_verificacao_bio">Utilizar verificação biométrica</string>
    <string name="downloading">Downloading %1$s</string>
    <string name="usuario_nao_autenticado">Usuario não autenticado</string>
    <string name="primeiro_acesso">Primeiro acesso</string>
    <string name="primeiro_acesso_info">Este é o seu primeiro acesso neste dispositivo, informe seu CPF e pressione Continuar</string>
    <string name="continuar">Continuar</string>
    <string name="cpf_inválido">CPF inválido</string>
    <string name="cancelar">Cancelar</string>
    <string name="cpf_nao_cadastrado">CPF não cadastrado</string>
    <string name="cpf_nao_cadastrado_info">Cadastro não encotrado, deseja realizar o cadastro?</string>
    <string name="atualizando_informacoes">Atualizando informações</string>
    <string name="inicializando_aplicacao">Inicializando a aplicação</string>
    <string name="verificando_informacoes">Verificando informações de acesso</string>
    <string name="fechar">fechar</string>
    <string name="valor_total">Valor total</string>
    <string name="title_financeiro">Financeiro</string>
    <string name="carregando">Carregando</string>
    <string name="eventos">Eventos</string>
    <string name="login_necessario">Primeiramente realize login no sistema.</string>
    <string name="preencha_dados">Preencha os dados</string>
    <string name="senha">Senha</string>
    <string name="informe_senha">Informe sua senha para continuar</string>
    <string name="usuario_autenticado">Usuário autenticado</string>
    <string name="celular_nao_informado">Celular não informado</string>
    <string name="logradouro_nao_informado">Logradouro não informado</string>
    <string name="nome_nao_informado">Nome não informado</string>
    <string name="telefone_nao_informado">Telefone não informado</string>
    <string name="senha_nao_informada">Senha não informada</string>
    <string name="informacoes_incompletas">Informações incompletas</string>
    <string name="senha_invalida">Senha inválida</string>
</resources>
