<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.perfil.PerfilActivity" android:background="@color/colorPrimaryDark">

    <TextView
            android:text="@string/meu_perfil"
            style="@style/titulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/txtTitulo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/nome"
            style="@style/lblItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/edtTelefone"
            app:layout_constraintTop_toTopOf="@+id/txt_nome" app:layout_constraintBottom_toBottomOf="@+id/txt_nome"/>
    <TextView
            android:text="@string/telefone"
            style="@style/lblItem"
            android:id="@+id/edtTelefone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtTelefone"
            app:layout_constraintBottom_toBottomOf="@+id/txtTelefone" android:layout_width="130dp"/>
    <TextView
            android:text="@string/celular"
            style="@style/lblItem"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/edtTelefone"
            app:layout_constraintBottom_toBottomOf="@+id/txtCelular" app:layout_constraintTop_toTopOf="@+id/txtCelular"/>
    <ImageView
            android:layout_width="198dp"
            android:layout_height="154dp" app:srcCompat="@drawable/ic_account_box_24px"
            android:id="@+id/img_foto" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTitulo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>
    <Spinner
            style="@style/lblItem"
            android:id="@+id/spnTipoLogradouro"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/txtLogradouro"
            app:layout_constraintBottom_toBottomOf="@+id/txtLogradouro"
            app:layout_constraintEnd_toEndOf="@+id/edtTelefone" android:foregroundTint="@color/colorPrimary"/>
    <EditText
            style="@style/txtItem"
            android:inputType="textPersonName"
            android:hint="@string/logradouro"
            android:ems="10"
            android:id="@+id/txtLogradouro"
            app:layout_constraintTop_toBottomOf="@+id/txtCelular"
            app:layout_constraintStart_toEndOf="@+id/spnTipoLogradouro" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:inputType="textPersonName"
            style="@style/txtItem"
            android:ems="10"
            android:id="@+id/txt_nome"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            android:hint="@string/nome"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/txtCpf"/>
    <EditText
            android:inputType="phone"
            style="@style/txtItem"
            android:hint="@string/telefone"
            android:ems="10"
            android:id="@+id/txtTelefone"
            app:layout_constraintTop_toBottomOf="@+id/txt_nome" android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/edtTelefone" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            style="@style/txtItem"
            android:inputType="textPersonName"
            android:hint="@string/celular"
            android:ems="10"
            android:id="@+id/txtCelular"
            app:layout_constraintTop_toBottomOf="@+id/txtTelefone" app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/Cancelar"
            style="@style/botao"
            android:id="@+id/btnCancelar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtLogradouro" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/btnConfirmar"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/confirmar"
            style="@style/botao"
            android:id="@+id/btnConfirmar"
            android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/btnCancelar"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtLogradouro"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/cpf"
            style="@style/lblItem"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtCpf" app:layout_constraintBottom_toBottomOf="@+id/txtCpf"
            app:layout_constraintEnd_toEndOf="@+id/edtTelefone" android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/txtCpf"
        style="@style/txtItem"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/img_foto" />

</androidx.constraintlayout.widget.ConstraintLayout>